# mse_vt_eeros

./: .gitignore  Documentation_v1.0-pdf  README.md
doc/: 01_abstract.tex  10_introduction.tex  20_concept.tex  30_changes.tex  40_demonstration.tex  99_anhang.tex  99_glossary.tex  template_Scrreprt.tex
planning/: planning.ods
presentation/: Presentation.odp
src/demo_package/: CMakeLists.txt  package.xml
src/demo_package/description/: demo_motor_simulation.urdf.xacro  demo_robot.urdf.xacro  mobile_robot.urdf.xacro
src/demo_package/include/demo_package/: JointState.hpp  JointStatePublisher.hpp  JointStateSubscriber.hpp  JointTrajectoryPublisher.hpp  demo_package.hpp
src/demo_package/launch/: simulation.launch.py
src/demo_package/src/: demo_package.cpp
